# sicon

./: .gitignore  __init__.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: release.yml
core/: database_access.py  session_manager.py  user_manager.py
ui/: create_user_page.py  home_page.py  login_page.py
