[build-system]
# Ferramenta moderna de build (wheel e sdist).
# Você pode usar 'hatchling', 'flit', ou o 'setuptools' com backend (como neste exemplo)
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
# 1. Metadados do Projeto
name = "sicon" # Mudei para 'sicon' para refletir o nome do projeto
authors = [
  {name = "Ronaldo Pinheiro", email = "ronaldo.pinheiro2009@gmail.com"},
]
description = "Sistema SICON de gest\u00e3o e login."
readme = "README.md"
requires-python = ">=3.9" # A versão mínima do Python que você suporta
license = {text = "MIT"} # Ou "GPL", "Apache-2.0", etc.
keywords = ["pydantic", "core", "ui"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

# Versão inicial. O semantic-release ir\u00e1 atualizar o __init__.py, mas o Setuptools precisa de um ponto de partida aqui tamb\u00e9m,
# ou use 'dynamic = ["version"]' e configure o Setuptools corretamente, mas usaremos a vers\u00e3o do __init__.py.
# Removida a linha 'dynamic = ["version"]' para evitar conflito com a atualiza\u00e7\u00e3o do __init__.py
version = "0.0.0"

# Dependências de Produção
dependencies = [
    # Se você for usar o Pydantic:
    "pydantic>=2.0", 
    # Adicione outras dependências aqui (ex: "requests", "fastapi")
]


[tool.setuptools.packages.find]
# Configura o setuptools para buscar o código dentro da pasta 'src'
where = ["src"] 


# 2. Configuração do Python Semantic Release
[tool.semantic_release]
# Correção: O caminho deve ser relativo \u00e0 raiz do projeto (onde est\u00e1 o pyproject.toml)
version_variable = "src/sicon/__init__.py:__version__" 

# Ramificação principal para releases
branch = "main"

# Tipos de commit que geram releases:
commit_type_majors = ["BREAKING CHANGE", "feat!"]
commit_type_minors = ["feat"]
commit_type_patches = ["fix"]

# Opções de release (padrão)
major_on_zero = false

# Garantir que a tag seja enviada corretamente
tag_format = "v{version}"
upload_to_release = true # Garante que o Release seja criado no GitHub


# 3. Configurações de Outras Ferramentas (Exemplo: pytest)
[tool.pytest.ini_options]
addopts = "--strict-markers"
testpaths = [
    "tests",
]


# 4. Configuração de Linting (Exemplo: ruff)
[tool.ruff]
line-length = 88
target-version = "py311" # A versão alvo do Python
select = ["E", "F", "W", "I"] # Erros, Flake8, Warnings, Import Sort
